--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "react-redux-parcel-starter",
   "version": "1.0.0",
   "description": "ReactJs starter project with redux/thunk and dev proxy express setup, assembled with parcel-bundler",
-  "main": "index.js",
   "scripts": {
-    "dev": "node ./src/server/server-dev",
+    "dev": "parcel serve ./src/html/index.html",
     "build": "PARCEL_BUNDLE_ANALYZER=1 parcel build ./src/html/index.html"
   },
   "repository": "https://github.com/rodion-raskolnikov/react-redux-parcel-starter",
@@ -12,31 +11,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "classnames": "^2.2.6",
     "clsx": "^1.1.0",
     "lodash": "^4.17.19",
     "moment": "^2.29.1",
     "prop-types": "^15.6.2",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "whatwg-fetch": "^3.4.1"
+    "whatwg-fetch": "^3.5.0"
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=14"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-decorators": "^7.10.5",
-    "@babel/preset-react": "^7.10.4",
-    "cross-env": "^5.2.0",
-    "express": "^4.16.4",
-    "http-proxy-middleware": "^0.19.1",
-    "parcel": "^1.12.4",
-    "parcel-bundler": "^1.12.4"
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.12",
+    "@babel/preset-react": "^7.12.10",
+    "parcel": "^2.0.0-nightly.532"
   }
 }
