--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,8 @@
   ],
   "plugins": [
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
-    ["@babel/plugin-proposal-class-properties"]
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    ["@babel/plugin-proposal-private-methods", { "loose": true }],
+    "@parcel/babel-plugin-transform-runtime"
   ]
 }
