--- a/package.json
+++ b/package.json
@@ -11,26 +11,30 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.14.6",
     "clsx": "^1.1.0",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "prop-types": "^15.6.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.1",
+    "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "whatwg-fetch": "^3.5.0"
+    "whatwg-fetch": "^3.6.2"
   },
   "engines": {
     "node": ">=14"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-decorators": "^7.12.12",
-    "@babel/preset-react": "^7.12.10",
-    "parcel": "^2.0.0-nightly.532"
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@parcel/babel-plugin-transform-runtime": "^2.0.0-nightly.1823",
+    "@parcel/transformer-image": "^2.0.0-nightly.2384",
+    "parcel": "^2.0.0-nightly.760"
   }
 }
