--- a/package.json
+++ b/package.json
@@ -11,30 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.14.6",
-    "clsx": "^1.1.0",
+    "clsx": "^1.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
     "whatwg-fetch": "^3.6.2"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-proposal-decorators": "^7.14.5",
-    "@babel/preset-env": "^7.14.7",
-    "@babel/preset-react": "^7.14.5",
-    "@parcel/babel-plugin-transform-runtime": "^2.0.0-nightly.1823",
-    "@parcel/transformer-image": "^2.0.0-nightly.2384",
-    "parcel": "^2.0.0-nightly.760"
+    "parcel": "^2.0.0"
   }
 }
